--- a/ex01-express/package.json
+++ b/ex01-express/package.json
@@ -24,5 +24,6 @@
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
     "uuid": "^11.1.0"
-  }
+  },
+  "packageManager": "npm@11.5.2+sha512.aac1241cfc3f41dc38780d64295c6c6b917a41e24288b33519a7b11adfc5a54a5f881c642d7557215b6c70e01e55655ed7ba666300fd0238bc75fb17478afaf3"
 }
